--- a/templates/App.html
+++ b/templates/App.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIL paráfrasis</title>
+    <title>AppParáfrasis GIL</title>
     <link href="{{ url_for('static',filename='App.css') }}" rel="stylesheet">
 </head>
 <body class="grid-container">
